# tftool

./: .hadolint.yaml  Dockerfile  Dockerfile.alpine  Dockerfile.debian  Dockerfile.dockerfromscratch  Dockerfile.python-alpine  Dockerfile.python-slim  Makefile  README.md  README.rst  docker-bake.hcl  setup.cfg
.github/workflows/: ci-docker.yml  publish-docker.yml
docs/: conf.py  index.rst  install.rst  tftool.rst
tests/: test_filter.py  test_main.py
tftool/: __init__.py  __main__.py  _backport.py
