[metadata]
name = tftk
description = Ergonomic utilities for the terraform CLI.
long_description = file: README.rst
keywords = terraform
author = Barnaby Shearer
author_email = b@zi.is
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
project_urls =
    Source = https://github.com/BarnabyShearer/tftk
    Tracker = https://github.com/BarnabyShearer/tftk/issues
    Documentation = http://tftk.readthedocs.io/en/latest/
    Docker = https://hub.docker.com/repository/docker/barnabyshearer/tftk

[options]
packages = find:
install_requires = 
python_requires = >=3.7

[options.package_data]
* = py.typed, *.c, *.h

[bdist_wheel]
universal=1
