[metadata]
name = tftool
description = Ergonomic utilities for the terraform CLI.
long_description = file: README.rst
keywords = terraform
author = Barnaby Shearer
author_email = b@zi.is
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
project_urls =
    Source = https://github.com/BarnabyShearer/tftool
    Tracker = https://github.com/BarnabyShearer/tftool/issues
    Documentation = http://tftool.readthedocs.io/en/latest/
    Docker = https://hub.docker.com/repository/docker/barnabyshearer/tftool

[options]
packages = find:
install_requires = 
python_requires = >=3.7

[options.package_data]
* = py.typed, *.c, *.h

[options.entry_points]
console_scripts = 
    tftool = tftool.__main__:main

[bdist_wheel]
universal=1
